<?xml version="1.0"?>
<package>
  <name>warthog_description</name>
  <version>0.1.6</version>
  <description>URDF robot description for Warthog</description>

  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>

  <license>BSD</license>

  <author email="rgariepy@clearpathrobotics.com">Ryan Gariepy</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <run_depend>robot_state_publisher</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
